<feat> upgraded deps and fixed profile image upload
